--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "resolveJsonModule": true,
     "allowJs": false,
     "checkJs": false,
+    "jsx": "react-jsx",
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
