docs" example usecase

--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
   ],
   "workspaces": [
     "packages/*",
-    "examples/*"
+    "examples/*",
+    "docs"
   ],
   "scripts": {
     "build": "tsup",
