--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@remcostoeten/vigilo-core",
+  "name": "btwfyi-core",
   "version": "0.0.12",
   "description": "Core functionality for Vigilo task awareness overlay",
   "author": "Remco Stoeten",
