--- a/examples/react/package.json
+++ b/examples/react/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vigilo-react-example",
+  "name": "btwfyi-react-example",
   "version": "0.0.1",
   "type": "module",
   "scripts": {
@@ -10,7 +10,7 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "@remcostoeten/vigilo": "file:../.."
+    "btwfyi": "file:../.."
   },
   "devDependencies": {
     "@types/react": "^18.3.27",
@@ -20,5 +20,3 @@
     "typescript": "^5.9.3"
   }
 }
-
-
