--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@remcostoeten/vigilo-vue",
+  "name": "btwfyi-vue",
   "version": "0.0.12",
   "description": "Vue bindings for Vigilo task awareness overlay",
   "author": "Remco Stoeten",
@@ -26,7 +26,7 @@
     "vue": ">=3.4.0"
   },
   "dependencies": {
-    "@remcostoeten/vigilo-core": "file:../core"
+    "btwfyi-core": "file:../core"
   },
   "devDependencies": {
     "@types/node": "^24.10.1",
